[gd_scene load_steps=13 format=3 uid="uid://dbbl764uivff2"]

[ext_resource type="Script" uid="uid://bv4wry502i02t" path="res://scripts/base/ui.gd" id="1_7jktm"]
[ext_resource type="Script" uid="uid://clx0dmilxwyth" path="res://scripts/base/transition.gd" id="1_fc0e3"]
[ext_resource type="Script" uid="uid://bkvvhf2ncfnhx" path="res://scripts/base/audio.gd" id="1_feb5d"]
[ext_resource type="Script" uid="uid://dhn6w7armvs76" path="res://scripts/base/scaffold.gd" id="2_fc0e3"]
[ext_resource type="Texture2D" uid="uid://dvk2i1uglvrjw" path="res://assets/sprites/icon.svg" id="2_ryrav"]
[ext_resource type="PackedScene" uid="uid://l6xve34c75ym" path="res://scenes/menus/title_menu/title_menu.tscn" id="3_7jktm"]

[sub_resource type="Animation" id="Animation_28aoi"]
resource_name = "Fade"

[sub_resource type="Animation" id="Animation_vvh5c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMask:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pyidc"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMask:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_l8v81"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMask:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jnlp7"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionMask:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnlp7"]
_data = {
&"Fade": SubResource("Animation_28aoi"),
&"RESET": SubResource("Animation_vvh5c"),
&"default": SubResource("Animation_pyidc"),
&"fade_in": SubResource("Animation_l8v81"),
&"fade_out": SubResource("Animation_jnlp7")
}

[node name="Game" type="Node" groups=["Game"]]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 0

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7jktm")

[node name="UIPadding" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/UIPadding"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/UIPadding/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ryrav")
expand_mode = 2
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UI/UIPadding/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="BumperCounterLabel" type="Label" parent="CanvasLayer/UI/UIPadding/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Transition" type="Control" parent="CanvasLayer" groups=["Transition"]]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fc0e3")

[node name="TransitionMask" type="ColorRect" parent="CanvasLayer/Transition"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TransitionPlayer" type="AnimationPlayer" parent="CanvasLayer/Transition"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_jnlp7")
}
autoplay = "default"

[node name="Audio" type="Node" parent="."]
script = ExtResource("1_feb5d")

[node name="PlayerSFX" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true

[node name="EnemySFX" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true

[node name="WorldSFX" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true

[node name="InterfaceSFX" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true

[node name="Scaffold" type="Node" parent="." groups=["Scaffold"]]
script = ExtResource("2_fc0e3")

[node name="TitleMenu" parent="Scaffold" instance=ExtResource("3_7jktm")]
